Fixing date placeholder hidden on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -41,3 +41,13 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; 
 }
+
+/* Date placeholder doesn't show on mobile */
+input[type="date"]:before {
+  color: lightgrey;
+  content: attr(placeholder) !important;
+  margin-right: 0.5em;
+}
+input[type="date"]:focus:before {
+  content: '' !important;
+}
